<resources>
    <string name="app_name">Viber Lite</string>
    <string name="text">Dark Mode</string>


    <!-- Start Activity string values... -->
    <string name="welcomeText">Welcome</string>
    <string name="firstScreenSecondText">Try this new Chat App</string>
    <string name="firstScreenThirdText">By tapping \"Continue\" \n
        "you will enter phone number registration screen.</string>
    <string name="continueButton">Continue</string>


    <!-- Second Activity string values after on clicked... -->
    <string name="phNumber">Enter your phone number</string>
    <string name="secondText1">Make sure you enter correct number based on your region so that a code can be sent to you.</string>
    <string name="PhoneNumber">Phone Number</string>


    <!-- DialogFragment string values -->
    <string name="IsThisYourPhNumber">Is this your phone number?</string>
    <string name="respectiveContactNumber">Phone Number</string>
    <string name="codeSent">A code will be sent to this number, and will activate automatically.</string>
    <string name="editOption">EDIT</string>
    <string name="yesOption">YES</string>


    <!-- OTP Activity string values -->
    <string name="otpScreenText">A code will be sent to you soon, that you can\n use to activate your account.</string>
    <string name="phone_number_code">Code</string>
    <string name="code">Code: </string>


    <!-- Dialog box string values -->
    <string name="activateText">Activating, Please wait…</string>


    <!-- string values for Profile -->
    <string name="profileName">Profile Name</string>
    <string name="profileDOB">Date of birth</string>
    <string name="userContactNumber">Contact Number</string>
    <string name="userDOB">DOB</string>
    <string name="buttonSet">Set</string>


    <!-- string values for bottom navigation items -->
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="more">More</string>


    <!-- string values for more options in bottom navigation views -->
    <string name="settings">Settings</string>
    <string name="addContacts">Add contact</string>
    <string name="about">About</string>
    <string name="user_profile">user profile</string>

    <!-- string values defined for ShowFriendsList Activity -->
    <string name="enter_name_search_bar_hint">Enter name</string>
    <string name="new_group">New Group</string>


    <string name="contactName">ContactName</string>
    <string name="invite_to_chatapp">Invite to ChatApp</string>
    <string name="send_message">Send Message</string>
    <string name="_0987654321">0987654321</string>

    <string name="username">UserName</string>
    <string name="invite">Invite</string>

    <string name="no_chat_history">No chat history</string>
    <string name="offline">Offline</string>
    <string name="new_message">New Message</string>
    <string name="type_a_message">Type a message…</string>

    <string name="account">Account</string>
    <string name="appearance">Appearance</string>
    <string name="delete_account">Delete Account</string>
    <string name="classic_theme">Classic Theme</string>
    <string name="dark_theme">Dark Theme</string>

    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="verification_code">Verification Code…</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="resend_code">Resend code</string>
    <string name="submit">Submit</string>
    <string name="please_wait">Please wait...</string>

</resources>