<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settingsAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settingsToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/settings"
            app:titleTextAppearance="@style/TextAppearance.CustomTextStyle"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/accountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background_state"
        app:drawableStartCompat="@drawable/account"
        android:drawablePadding="20dp"
        android:text="@string/account"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/settingsAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/accountChildLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/accountLayout"
        app:layout_constraintStart_toStartOf="@+id/accountLayout"
        app:layout_constraintEnd_toEndOf="@+id/accountLayout"
        android:visibility="gone">

        <TextView
            android:id="@+id/deleteAccountTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_background_state"
            android:text="@string/delete_account"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:onClick="deleteAccount"/>

    </LinearLayout>

    <TextView
        android:id="@+id/appearanceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background_state"
        app:drawableStartCompat="@drawable/appearance"
        android:drawablePadding="20dp"
        android:text="@string/appearance"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/accountChildLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/appearanceChildLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/appearanceLayout"
        app:layout_constraintStart_toStartOf="@id/appearanceLayout"
        app:layout_constraintEnd_toEndOf="@id/appearanceLayout">

        <TextView
            android:id="@+id/classicThemeTxt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/theme_bg_state"
            android:text="@string/classic_theme"
            android:textSize="14sp"
            android:textColor="@color/colorLightPurple"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:onClick="setLightTheme"/>

        <TextView
            android:id="@+id/darkThemeTxt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/theme_bg_state"
            android:text="@string/dark_theme"
            android:textSize="14sp"
            android:textColor="@color/colorLightPurple"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:onClick="setDarkTheme"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>