<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/phNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phNumber"
        android:textSize="20sp"
        android:textColor="@color/colorLightPurple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondText1"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/phNumberText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="5dp"/>

    <com.hbb20.CountryCodePicker
        android:id="@+id/countryCodePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:ccp_textSize="16sp"
        android:padding="6dp"
        app:ccp_showFullName="false"
        app:ccp_showPhoneCode="true"
        app:ccp_showNameCode="true"
        app:ccp_showFlag="true"
        app:ccp_autoDetectCountry="true"
        app:ccp_rememberLastSelection="true"
        android:onClick="OnCountryCodePicker"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"/>

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:padding="16dp"-->
<!--        android:text="+"-->
<!--        android:textSize="18sp"-->
<!--        android:textAlignment="textStart"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/phNumberEditText"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/countryCodePicker" />-->

<!--    <EditText-->
<!--        android:id="@+id/countryCode"-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:hint="977"-->
<!--        android:textSize="18sp"-->
<!--        android:padding="20dp"-->
<!--        android:inputType="phone"-->
<!--        android:layout_marginStart="7dp"-->
<!--        android:textAlignment="textStart"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/countryCodePicker"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/phNumberEditText"-->
<!--        android:layout_marginTop="20dp"/>-->

    <EditText
        android:id="@+id/phNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/PhoneNumber"
        android:textSize="16sp"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="14"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintStart_toEndOf="@+id/countryCodePicker"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"
        android:layout_marginStart="127dp"
        android:layout_marginEnd="5dp"/>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_state_on_changed"
        android:text="@string/continueButton"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:focusable="true"
        android:clickable="true"
        android:onClick="OnPressedContinue"
        app:layout_constraintTop_toBottomOf="@+id/phNumberEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>