<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    android:layout_marginTop="1dp"
    android:background="@drawable/contact_card_state_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/userImage"
            android:layout_width="52dp"
            android:layout_height="52dp"
            app:cardCornerRadius="23dp"
            app:cardBackgroundColor="@color/colorPurple"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/userProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/contact_image_view_shape"
                    android:scaleType="centerCrop"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/user_profile"/>

                <TextView
                    android:id="@+id/userNameFirstAndLastLetter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textAppearance="@style/TextAppearance.ContactName"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/colorBlack"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userImage"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/newMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_message"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            app:layout_constraintStart_toStartOf="@+id/userName"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>