<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileSetupLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileSetupActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileImageLayout"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:cardCornerRadius="46dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/setupProfileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/state_pressed_on_circle_image_view"
                    android:scaleType="centerCrop"
                    android:layout_centerInParent="true"
                    tools:ignore="contentDescription"/>

                <TextView
                    android:id="@+id/camera_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/camera"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/setupProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profileName"
        android:autofillHints="ProfileName"
        android:textSize="17sp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/profileImageLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <EditText
        android:id="@+id/setupProfileDOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profileDOB"
        android:autofillHints="DateOfBirth"
        android:textSize="17sp"
        android:inputType="none"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/setupProfileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <Button
        android:id="@+id/buttonSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSet"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:background="@drawable/set_button"
        app:layout_constraintTop_toBottomOf="@+id/setupProfileDOB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>