<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.VisitContactProfile">

    <androidx.cardview.widget.CardView
        android:id="@+id/contactProfileCard"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/contactProfileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/blank_profile_picture"
            android:scaleType="centerCrop"
            tools:ignore="contentDescription"/>

        <TextView
            android:id="@+id/contactButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_back"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/contactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactName"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/colorWhite"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="25dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/inviteUserCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPurple"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/contactProfileCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp">

        <TextView
            android:id="@+id/inviteUserTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_to_chatapp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/freeMessageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:padding="8dp"
            android:visibility="gone"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/contactPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0987654321"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/inviteUserCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:paddingBottom="15dp"
        android:background="@drawable/contact_card_state_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>