<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ShowFriendsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/chat_fab_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/searchIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_baseline_search"
                    android:visibility="visible"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name_search_bar_hint"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:focusable="true"
                    android:clickable="true"
                    android:inputType="textPersonName"
                    tools:ignore="Autofill"
                    android:padding="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="10"
                    android:imeOptions="actionSearch"/>

                <TextView
                    android:id="@+id/clearText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_baseline_clear"
                    android:padding="4dp"
                    tools:ignore="ContentDescription"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    android:visibility="gone"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/createNewGroupCardOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_group"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:padding="20dp"
        android:textColor="@color/colorBlack"
        android:background="@drawable/card_background_state"
        app:drawableStartCompat="@drawable/ic_baseline_group"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="createNewGroup"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/showUsersOnSearch_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/createNewGroupCardOption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/horizontalBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="10dp"
        android:background="@color/colorLowWhite"
        app:layout_constraintTop_toBottomOf="@id/showUsersOnSearch_recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/showContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/horizontalBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contacts"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:background="@color/colorWhite"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/registeredUserRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>